<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/Slika"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" />
    
     <TextView 
	    
	    android:id="@+id/opis_aplikacije"
	    android:text="@string/opis_app"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	   
	    
	    />

     <TextView
         android:id="@+id/developeri"
         android:layout_width="134dp"
         android:layout_height="wrap_content"
         android:text="@string/developeri" />

</LinearLayout>