<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_ucenik_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/txt_ucenik_id"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_vrijednost_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="20sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/edt_ime"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/poruka_ime_korisnika"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_prezime"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/poruka_prezime_korisnika"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_mail_adress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/poruka_mail_adresa"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_lozinka"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/poruka_lozinka"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_potvrda_lozinke"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/poruka_potvrda_lozinke"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_azuriraj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_button_design"
        android:text="@string/btn_azuriraj"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/VelicinaTextaLogin" />

</LinearLayout>