<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/img_ikona"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:contentDescription="@string/Slika"
        android:src="@drawable/ic_launcher" />
    
     <TextView
         android:id="@+id/txt_opis_aplikacije"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:gravity="center"
         android:lineSpacingMultiplier="1.5"
         android:text="@string/opis_app"
         android:textSize="15sp" />

     <TextView
         android:id="@+id/txt_developeri"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:background="#3897CF"
         android:gravity="end"
         android:lineSpacingMultiplier="1.5"
         android:padding="5dp"
         android:text="@string/developeri"
         android:textColor="#FFFFFF"
         android:textStyle="bold|italic" />

</LinearLayout>